# SmartCFDTradingAgent_Revolut

./: .dockerignore  .env  .env.deploy.example  .env.example  .gitignore  COPILOT_INSTRUCTIONS.md  GENERAL_INSTRUCTIONS.md  Instructions.md  LESSONS_LEARNED.md  PHASE_SUMMARY.md  PROJECT_SUMMARY.md  README-DEPLOY.md  README.md  WHERE_WE_ARE.md  agents.md  config.ini.example  diff_output.txt  docker-compose.yml  docs_ROADMAP.md  hello.txt  launch_dashboard.cmd  pyproject.toml  requirements.txt  revolut_test.csv  temp_block.txt  tmp_snip.txt
SmartCFDTradingAgent/: __init__.py  __main__.py  assets.yml  backtester.py  calculator.py  data_loader.py  emailer.py  indicators.py  ml_models.py  optimizer.py  pipeline.py  position.py  rank_assets.py  reporting.py  revolut_recon.py  signals.py  train_model.py  walk_forward.py
apps/: dashboard.py
configs/: crypto.yml  equities.yml  multi_asset.yml
docker/: Dockerfile  entrypoint.sh  healthcheck.py  runner.py
docs/: GENERAL_INSTRUCTIONS.md  LESSONS_LEARNED.md  PROJECT_SUMMARY.md  README-DEPLOY.md  ROADMAP.md  SWOT_ANALYSIS.md  automated-retraining.md  data-integrity.md  deleted-files.md  implementation-plan.md  linux-scheduling.md  overfitting-mitigation.md  volatility-defense.md  windows-scheduling.md
models/: feature_names.joblib  model.joblib
reports/: daily_digest.json  daily_digest.txt  feature_importances.csv  trade_history_BTC_USD_20251007_204437.csv  trade_history_BTC_USD_20251007_205809.csv  trade_history_BTC_USD_20251007_210000.csv
scripts/: backtest.py  check_alpaca.py  crypto_loop.cmd  crypto_loop.sh  nightly.sh  (+32 more)
(+80 files in other folders)
